fix z-index for time indicators

--- a/css/sc-player-psylus/structure-horizontal.css
+++ b/css/sc-player-psylus/structure-horizontal.css
@@ -124,6 +124,7 @@
   position: absolute;
   right: 9px;
   bottom: 10px;
+  z-index: 900;
 }
 
 /* tracks */
